# rust

./: .gitignore  .gitmodules  Cargo.toml  LLVMIsMultithreaded.txt  README.md  comment.txt  config.example.toml  config.llvm.toml  config.toml  log.txt  rustc-ice-2024-09-07T06_53_18-1.txt  rustc.html  rustc.sh  tt.txt  walker.py  walker.txt  walker_file.txt  wrapper_linker.sh  wrapper_linker_clang.sh
.github/workflows/: redox.yml
compiler/env-alt/: Cargo.toml  lib.rs
compiler/llvm_tester/: Cargo.toml
compiler/rustc/: Cargo.toml
compiler/rustc_arena/src/: lib.rs
compiler/rustc_asm/: Cargo.toml
compiler/rustc_asm/src/: lib.rs
compiler/rustc_ast/: Cargo.toml
compiler/rustc_ast/src/: ast.rs  lib.rs  tokenstream.rs
compiler/rustc_ast_lowering/: Cargo.toml
compiler/rustc_ast_lowering/src/: item.rs  lib.rs
compiler/rustc_ast_pretty/: Cargo.toml
compiler/rustc_attr/src/: builtin.rs  lib.rs
compiler/rustc_borrowck/: Cargo.toml
compiler/rustc_borrowck/src/: nll.rs
compiler/rustc_builtin_macros/: Cargo.toml
compiler/rustc_builtin_macros/src/: env.rs  global_allocator.rs
compiler/rustc_codegen_cranelift/: .cirrus.yml  .gitignore  Cargo.toml  build-wasi.sh  rustc-wrapper.sh  tempfile.diff
compiler/rustc_codegen_cranelift/.github/workflows/: main.yml
compiler/rustc_codegen_cranelift/build_system/: prepare.rs
compiler/rustc_codegen_cranelift/patches/: stdlib-lock.toml
compiler/rustc_codegen_cranelift/src/: allocator.rs  config.rs  inline_asm.rs  lib.rs  metadata.rs
compiler/rustc_codegen_cranelift/src/debuginfo/: mod.rs
compiler/rustc_codegen_cranelift/src/driver/: aot.rs  jit.rs
compiler/rustc_codegen_gcc/: Cargo.toml
compiler/rustc_codegen_gcc/src/: allocator.rs  base.rs  lib.rs
compiler/rustc_codegen_llvm/: Cargo.toml
compiler/rustc_codegen_llvm/src/: allocator.rs  asm.rs  attributes.rs  base.rs  builder.rs  lib.rs  llvm_util.rs
compiler/rustc_codegen_ssa/: Cargo.toml
compiler/rustc_codegen_ssa/src/: base.rs  lib.rs  target_features.rs
compiler/rustc_data_structures/: Cargo.toml
compiler/rustc_data_structures/src/: flock.rs  lib.rs  stable_hasher.rs
compiler/rustc_driver/: Cargo.toml
compiler/rustc_driver/src/: lib.rs  pretty.rs
compiler/rustc_driver_impl/: Cargo.toml
compiler/rustc_driver_impl/src/: lib.rs
compiler/rustc_errors/src/: emitter.rs  lib.rs
compiler/rustc_expand/src/: config.rs
compiler/rustc_feature/src/: builtin_attrs.rs
compiler/rustc_fs_util/src/: lib.rs
compiler/rustc_hir/: Cargo.toml
compiler/rustc_hir/src/: arena.rs  definitions.rs  hir.rs  lang_items.rs  lib.rs
compiler/rustc_hir_pretty/src/: lib.rs
compiler/rustc_index/: Cargo.toml
compiler/rustc_index/src/: bit_set.rs  lib.rs
compiler/rustc_infer/src/: lib.rs
compiler/rustc_interface/: Cargo.toml
compiler/rustc_interface/src/: interface.rs  lib.rs  passes.rs  queries.rs  util.rs
compiler/rustc_lint/src/: context.rs  lib.rs
compiler/rustc_lir/: Cargo.toml
compiler/rustc_lir/src/: builder.rs  discriminant.rs  lib.rs
compiler/rustc_llvm/: Cargo.toml  build.rs
compiler/rustc_llvm/src/: lib.rs
compiler/rustc_metadata/: Cargo.toml
compiler/rustc_metadata/src/: creader.rs  dependency_format.rs  dynamic_lib.rs  encoded_metadata.rs  lib.rs  locator.rs
compiler/rustc_middle/: Cargo.toml
compiler/rustc_middle/src/: arena.rs  lib.rs  thir.rs
compiler/rustc_mir/src/: lib.rs
compiler/rustc_mir_build/: Cargo.toml
compiler/rustc_mir_build/src/: check_unsafety.rs  lib.rs
compiler/rustc_monomorphize/src/: partitioning.rs
compiler/rustc_parse/src/: lib.rs
compiler/rustc_parse_format/src/: lib.rs  tests.rs
compiler/rustc_passes/: Cargo.toml
compiler/rustc_passes/src/: intrinsicck.rs  lib.rs  liveness.rs  reachable.rs  (+2 more)
compiler/rustc_plugin_impl/: Cargo.toml
compiler/rustc_query_impl/: Cargo.toml
src/: librustc_codegen_cranelift
src/bootstrap/: builder.rs  check.rs  compile.rs  config.rs  dist.rs  format.rs  install.rs  lib.rs  sanity.rs  test.rs  toolstate.rs  util.rs
src/liballoc/: boxed.rs  vec.rs
src/liballoc_jemalloc/: lib.rs
src/libarena/: lib.rs
src/libfmt_macros/: Cargo.toml
src/libgraphviz/: lib.rs
src/libpanic_unwind/: gcc.rs
src/libproc_macro/: lib.rs
src/librustc/: Cargo.toml  lib.rs
src/librustc_allocator/: Cargo.toml
src/librustc_apfloat/: ieee.rs  lib.rs
src/librustc_borrowck/: Cargo.toml
src/librustc_codegen_llvm/: Cargo.toml  asm.rs  builder.rs  callee.rs  common.rs  consts.rs  intrinsic.rs
src/librustc_codegen_ssa/: Cargo.toml  base.rs  callee.rs  meth.rs
src/librustc_codegen_utils/: Cargo.toml  codegen_backend.rs  lib.rs  symbol_export.rs
src/librustc_const_eval/: _match.rs  check_match.rs
src/librustc_cratesio_shim/: Cargo.toml
src/librustc_data_structures/: Cargo.toml  flock.rs  jobserver.rs  stack.rs
src/librustc_driver/: Cargo.toml  driver.rs  lib.rs  pretty.rs
src/librustc_errors/: Cargo.toml  emitter.rs
src/librustc_expand/: proc_macro_server.rs
src/librustc_fs_util/: Cargo.toml
src/librustc_incremental/: Cargo.toml  assert_dep_graph.rs
src/librustc_interface/: Cargo.toml  passes.rs  util.rs
src/librustc_lint/: Cargo.toml  builtin.rs
src/librustc_metadata/: Cargo.toml  creader.rs  cstore_impl.rs  decoder.rs  dynamic_lib.rs  encoder.rs  lib.rs  locator.rs  schema.rs
src/librustc_mir/: Cargo.toml
src/librustc_passes/: Cargo.toml
src/librustc_plugin/: Cargo.toml
src/librustc_privacy/: Cargo.toml
src/librustc_resolve/: Cargo.toml
src/librustc_save_analysis/: Cargo.toml
src/librustc_session/: filesearch.rs  output.rs  search_paths.rs  session.rs
src/librustc_target/: Cargo.toml
src/librustc_traits/: Cargo.toml
src/librustc_trans/: base.rs  lib.rs
src/librustc_trans_cretonne/: Cargo.toml  common.rs  context.rs  lib.rs  trans_crate.rs  trans_item.rs
src/librustc_trans_utils/: lib.rs
src/librustc_typeck/: Cargo.toml
src/libstd/: Cargo.toml
src/libsyntax/: Cargo.toml
src/libsyntax_ext/: Cargo.toml
src/libsyntax_pos/: Cargo.toml  lib.rs
src/libtest/: Cargo.toml
src/rustc/: Cargo.toml  run_miri.sh  rustc.rs
(+220 files in other folders)
