[package]
authors = ["The Rust Project Developers"]
name = "rustc_codegen_utils"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustc_codegen_utils"
path = "lib.rs"

test = false

[dependencies]
ar = "0.7.0"
log = "0.4"

syntax = { path = "../libsyntax" }
syntax_pos = { path = "../libsyntax_pos" }
rustc = { path = "../librustc" }
rustc_allocator = { path = "../librustc_allocator" }
rustc_target = { path = "../librustc_target" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_metadata = { path = "../librustc_metadata" }
rustc_mir = { path = "../librustc_mir" }
