[package]
authors = ["The Rust Project Developers"]
name = "rustc-main"
version = "0.0.0"
edition = '2018'

[[bin]]
name = "rustc_binary"
path = "rustc.rs"

[dependencies]
rustc_target = { path = "../librustc_target" }
rustc_driver = { path = "../librustc_driver" }

# Make sure rustc_codegen_ssa ends up in the sysroot, because this
# crate is intended to be used by codegen backends, which may not be in-tree.
rustc_codegen_ssa = { path = "../librustc_codegen_ssa" }

miri = { path = "../../../miri", default-features = false }
rustc = { path = "../librustc" }
rustc_interface = { path = "../librustc_interface" }
syntax = { path = "../libsyntax" }

log = "0.4"
env_logger = "0.6"
hex = "0.3.2"

[dependencies.jemalloc-sys]
version = '0.3.0'
optional = true
features = ['unprefixed_malloc_on_supported_platforms']

[features]
jemalloc = ['jemalloc-sys']
